
        CHANGES IN spatstat.explore VERSION 3.3-3

OVERVIEW

    o relative risk estimation using diffusion.

    o smoothing using diffusion.

    o Tweaks to bandwidth selection.

NEW FUNCTIONS

    o relriskHeat, relriskHeat.ppp
    Relative risk estimation using diffusion.

    o blurHeat, blurHeat.im
    Image smoothing using diffusion.

    o SmoothHeat, SmoothHeat.ppp
    Smoothing numerical values observed at points, using diffusion.

    o bw.relriskHeatppp
    Bandwidth selection for relriskHeat.ppp

SIGNIFICANT USER-VISIBLE CHANGES

    o bw.ppl
    Argument 'shortcut' now defaults to TRUE.

        CHANGES IN spatstat.explore VERSION 3.3-2

OVERVIEW

    o Tweaks to documentation.

    o Internal repairs.

    o Internal changes to satisfy package checker.

        CHANGES IN spatstat.explore VERSION 3.3-1

OVERVIEW

    o Internal changes to satisfy package checker.
    
    
        CHANGES IN spatstat.explore VERSION 3.3-0

OVERVIEW

    o 'spatstat.explore' now depends on package 'spatstat.univar'.

    o Some functions have been moved to 'spatstat.univar'.
    
    o Minor improvements.

PACKAGE DEPENDENCE

    o spatstat.explore now depends on the new package 'spatstat.univar'

    o Some functions have been moved
    from 'spatstat.explore' to 'spatstat.univar'.

SIGNIFICANT USER-VISIBLE CHANGES

    o cbind.fv, bind.fv
    Additional arguments may be functions in the R language.

DELETED FUNCTIONS

    o bw.abram
    The generic 'bw.abram' has been moved
    to the new package 'spatstat.univar'.
    
    o CDF, CDF.density
    The generic 'CDF' and method 'CDF.density' have been moved
    to the new package 'spatstat.univar'.

    o densityAdaptiveKernel
    The generic 'densityAdaptiveKernel' has been moved
    to the new package 'spatstat.univar'.
    
    o dkernel, pkernel, qkernel, rkernel
    These functions have been moved to the new package 'spatstat.univar'.

    o kernel.factor, kernel.moment, kernel.squint