@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.3-3
-Date: 2024-10-22
+Version: 3.3-3.001
+Date: 2024-12-27
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
