@@ -12,3 +12,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2024-07-09" "3.3-1" 230 517 0 31571 6365
 "2024-08-20" "3.3-2" 230 517 0 31571 6364
 "2024-10-22" "3.3-3" 235 525 0 31903 6364
+"2024-12-27" "3.3-3.001" 235 525 0 31907 6364
